--- a/css/style.css
+++ b/css/style.css
@@ -266,7 +266,7 @@ button:active {
     background-repeat: no-repeat;
     background-position-x: right;
     position: absolute;
-    top: 76px;
+    top: 72px;
     right: 0;
     width: 100%;
     height: 100%;    
@@ -288,7 +288,7 @@ button:active {
 }
 .main__title {
     text-align: center;
-    margin: 0 auto 16px;
+    margin: 0 auto 38px;
     font-style: normal;
     font-weight: 800;
     font-size: 96px;
@@ -322,15 +322,14 @@ button:active {
     max-width: 755px;
     margin: 0 auto 81px;
 }
-.main__arrow {
-    position: absolute;
+.main__arrow {    
+    position: relative;
     bottom: 30px;
     display: none;
     width: 64px;
     height: 64px;
     border-radius: 50%;
     background-color: var(--white);
-    position: relative;
     z-index: 1;
     align-items: center;
     justify-content: center;
@@ -401,7 +400,7 @@ button:active {
 /* -----------------------------------------------------------Delivering -------------------*/
 .delivering {
     margin-top: 170px;
-    padding-bottom: 114px;
+    padding-bottom: 34px;
 }
 .delivering__title {
     font-weight: 700;
@@ -669,7 +668,7 @@ ul .benefits__mob {
 .subscriptions__description li {
     font-weight: 400;
     font-size: 18px;
-    line-height: 1.78;
+    line-height: 40px;
     color: var(--black);
     margin-bottom: 16px;
     position: relative;
@@ -685,7 +684,7 @@ ul .benefits__mob {
     background-position: center center;
     position: absolute;
     left: 0;
-    top: 0;
+    top: 4px;
 }
 .description-month__free li::before {
     background-color: var(--soft-grey);
@@ -1022,11 +1021,12 @@ textarea:focus {
     }
     .subscriptions__description li {
         font-size: 15px;
+        line-height: 1.78;
     }
     .subscriptions__description li::before {
         width: 30px;
         height: 30px;
-        top: -3px;
+        top: -1px;
     }
 }
 @media (max-width: 1167px) {
@@ -1104,7 +1104,7 @@ textarea:focus {
         border-radius: 7px;    
     }
     .header__body {
-        padding: 16px 0;
+        padding: 14px 0;
     }
     .header__logo > span {
         font-size: 33px;
@@ -1343,12 +1343,9 @@ textarea:focus {
     .main {
         padding-top: 120px;
     }
-    .main::before {
-        top: 0;
-    }
     .main__title {
         font-size: 48px;
-        line-height: 1.17;
+        line-height: 1.2;
     }
     .main__title_combine {
         display: block;
@@ -1365,9 +1362,10 @@ textarea:focus {
     .main__subtitle {
         font-size: 24px;
         max-width: 300px;
+        margin-bottom: 55px;
     }
     .main__arrow {
-        bottom: 42px;
+        bottom: 29px;
     }
     .main__link {
         font-size: 14px;
@@ -1409,6 +1407,9 @@ textarea:focus {
     }
 } 
 @media (max-width: 480px) {
+    .main::before {
+        top: 0;
+    }
     .pricing__title {
         font-size: 32px;
         margin-bottom: 8px;
@@ -1458,6 +1459,7 @@ textarea:focus {
         color: var(--black);
     }
 }
+
 @media (max-width: 340px) {
     .benefits__title {
         font-size: 17px;
